--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,16 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/classic.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A collaborative whiteboard for you and your friends to draw on"
+      content="A collaborative whiteboard for real-time drawing and interaction"
     />
+    <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.es5.min.js"></script>
   </head>
   <body>
     <div class="header">
@@ -154,13 +159,10 @@
       </select>
     </div>
     <canvas id="my-canvas" style="height: 100vh; width: 100vw"></canvas>
-    <!-- <script src="/socket.io/socket.io.js"></script> -->
-    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
-    <!-- <script src="app.js"></script> -->
-    <script type="module" src="elementReferences.js"></script>
-    <script type="module" src="socketEvents.js"></script>
-    <script type="module" src="main.js"></script>
-    <!-- <script type="module" src="main.js"></script> -->
+    <script defer src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <script type="module" defer src="elementReferences.js"></script>
+    <script type="module" defer src="socketEvents.js"></script>
+    <script type="module" defer src="main.js"></script>
     <script type="module" defer src="eventListeners.js"></script>
   </body>
 </html>
