--- a/public/index.html
+++ b/public/index.html
@@ -129,10 +129,15 @@
         <span id="current-room-code"></span>
       </div>
       <div class="join-container">
-        <div class="btn-group">
+        <div class="collab-btn-group">
+          <button id="join-room-btn" class="btn" style="display: none">
+            Join Room
+          </button>
           <button id="create-room-btn" class="btn" style="display: none">
             Create Room
           </button>
+        </div>
+        <div class="btn-group">
           <input
             type="text"
             id="connect-code"
@@ -140,14 +145,6 @@
             style="display: none"
             title="Type the code you received from a friend to connect to their whiteboard"
           />
-          <button class="btn" style="display: none" id="connect-btn">
-            Connect
-          </button>
-        </div>
-        <div class="btn-group">
-          <button id="join-room-btn" class="btn" style="display: none">
-            Join Room
-          </button>
           <input
             type="text"
             id="join-code"
@@ -156,21 +153,13 @@
             title="Type a unique code to share with friends and collaborate on the same whiteboard"
           />
           <button class="btn" style="display: none" id="join-btn">Join</button>
+          <button class="btn" style="display: none" id="connect-btn">
+            Connect
+          </button>
         </div>
       </div>
     </div>
     <div class="btn-container">
-      <div class="btn-group">
-        <span id="util-selected"></span>
-        <button id="utilities-btn" class="btn">Utilities</button>
-        <div id="utilities-popout" style="display: none">
-          <button id="undo-btn" class="btn">Undo</button>
-          <button id="redo-btn" class="btn">Redo</button>
-          <button id="clear-btn" class="btn">Clear</button>
-          <button id="eraser-btn" class="btn">Eraser</button>
-        </div>
-        <p id="selected-utility" style="display: none"></p>
-      </div>
       <button id="black-btn" class="btn">Black</button>
       <button id="red-btn" class="btn">Red</button>
       <button id="blue-btn" class="btn">Blue</button>
@@ -190,11 +179,33 @@
         <option value="butt">Butt</option>
       </select>
     </div>
+    <div class="utilities-container">
+      <button id="utilities-btn" class="btn">Utilities</button>
+      <div id="utilities-popout" class="utilities-menu">
+        <div class="utility-options">
+          <button id="undo-btn" class="btn utility-option">Undo</button>
+          <button id="redo-btn" class="btn utility-option">Redo</button>
+          <button id="clear-btn" class="btn utility-option">Clear</button>
+          <button id="eraser-btn" class="btn utility-option">Eraser</button>
+        </div>
+      </div>
+      <p id="selected-utility" style="display: none"></p>
+    </div>
     <canvas id="my-canvas" style="height: 100vh; width: 100vw"></canvas>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script type="module" src="elementReferences.js"></script>
     <script type="module" src="socketEvents.js"></script>
     <script type="module" src="main.js"></script>
     <script type="module" src="eventListeners.js"></script>
+    <script>
+      window.addEventListener("click", function (e) {
+        if (
+          !document.querySelector(".utilities-container").contains(e.target) &&
+          !e.target.classList.contains("utility-option")
+        ) {
+          utilitiesMenu.style.display = "none";
+        }
+      });
+    </script>
   </body>
 </html>
